# erp-rust-acme-corp

./: .gitignore  Cargo.toml  README.md
doc-repo/ERP/: README.md  e_business.md  gerenciamento_conta.md  gerenciamento_producao.md  gerenciamento_vendas_distribuicao.md  gestao_cadeia_abastecimento.md  gestao_fabricacao.md  gestao_financeira.md  gestao_recursos_humanos.md  gestao_relacionamento_cliente.md  gestao_transporte.md
e_business/: Cargo.toml
e_business/src/: lib.rs
erp-core/: Cargo.toml
erp-core/src/: main.rs
gerenciamento_conta/: Cargo.toml
gerenciamento_conta/src/: lib.rs
gerenciamento_producao/: Cargo.toml
gerenciamento_producao/src/: lib.rs
gerenciamento_vendas_distribuicao/: Cargo.toml
gerenciamento_vendas_distribuicao/src/: lib.rs
gestao_cadeia_abastecimento/: Cargo.toml
gestao_cadeia_abastecimento/src/: lib.rs
gestao_fabricacao/: Cargo.toml
gestao_fabricacao/src/: lib.rs
gestao_fabricacao/src/controllers/: mod.rs
gestao_financeira/: Cargo.toml
gestao_financeira/src/: lib.rs
gestao_recursos_humanos/: Cargo.toml
gestao_recursos_humanos/src/: lib.rs
gestao_recursos_humanos/src/views/: mod.rs
gestao_relacionamento_cliente/: Cargo.toml
gestao_relacionamento_cliente/src/: lib.rs
gestao_transporte/: Cargo.toml
gestao_transporte/src/: lib.rs
gestao_transporte/src/models/: mod.rs
